--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <a href="#"><img src="image/lg.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a class="active" href="about.html">About</a></li>
